Test additional configurations

--- a/config/.env-local
+++ b/config/.env-local
@@ -11,6 +11,10 @@ POSTGRES_DB=superset
 POSTGRES_USER=superset
 POSTGRES_PASSWORD=change_me
 
+# External Database Configuration
+VISTA_PG_PORT=5432
+VISTA_PG_PASSWORD=change_me
+
 # Superset Configuration
 APP_NAME=Superset
 LOGO_RIGHT_TEXT=SecureHST
