--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,6 +27,7 @@ x-superset-depends-on: &superset-depends-on
   - redis
 x-superset-volumes:
   &superset-volumes # /app/pythonpath_docker will be appended to the PYTHONPATH in the final container
+  - .git:/app/.git
   - ./docker:/app/docker
   - ./config/superset_config_docker.py:/app/docker/superset_config_docker.py
   - superset_home:/app/superset_home
